<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activity.MainActivity">


    <ImageView
        android:id="@+id/img_day"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_sky"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/container_cl"
        android:id="@+id/progress_Bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate = "true"
        android:max="100"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:progress="0"/>


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/container_cl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/bg_main_window"
        android:elevation="22dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/cont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/tv_date"
                    android:textSize="14sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/tv_city_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:background="@drawable/bg_rounded_tv"
                android:padding="10dp"
                android:text="@string/tv_city"
                android:textColor="@color/blue"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/cont"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cont" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView

            android:id="@+id/img_cloud"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/ic_clouds"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container" />

        <TextView
            android:id="@+id/tv_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_thin"
            android:text="@string/tv_wether"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/img_cloud"
            app:layout_constraintStart_toStartOf="@id/img_cloud"
            app:layout_constraintTop_toBottomOf="@id/img_cloud" />


        <TextView

            android:id="@+id/tv_dagre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="45dp"
            android:fontFamily="@font/barlow_thin"
            android:text="@string/tv_temperature"
            android:textColor="@color/black"
            android:textSize="64sp"
            app:layout_constraintEnd_toEndOf="@id/tv_dagre_max"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toEndOf="@id/img_cloud"
            app:layout_constraintTop_toBottomOf="@id/container" />

        <TextView
            android:paddingTop="10dp"
            android:textSize="24sp"
            android:fontFamily="@font/barlow_thin"
            android:text="°C"
            app:layout_constraintTop_toTopOf="@id/tv_dagre"
            app:layout_constraintStart_toEndOf="@id/tv_dagre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_dagre_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="66dp"
            android:fontFamily="@font/barlow_thin"
            android:text="@string/dagre"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_dagre_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_dagre" />

        <TextView

            android:id="@+id/tv_dagre_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/barlow_thin"
            android:text="27°C"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tv_dagre_max"
            app:layout_constraintStart_toStartOf="@id/tv_dagre_max"
            app:layout_constraintTop_toBottomOf="@id/tv_dagre_max" />


        <LinearLayout
            android:gravity="center_horizontal"

            android:id="@+id/container_ll3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dagre">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:src="@drawable/ic_sunrice" />

                <TextView
                    android:id="@+id/tv_sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/barlow_bold"
                    android:text="6:03 AM"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Sunrise"
                    android:textSize="10sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginHorizontal="75dp"
                android:orientation="vertical">

                <ImageView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:src="@drawable/ic_sunrice" />

                <TextView
                    android:id="@+id/tv_sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/barlow_bold"
                    android:text="7:05 PM"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Sunset"
                    android:textSize="10sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:src="@drawable/ic_time" />

                <TextView
                    android:id="@+id/tv_daytime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/barlow_bold"
                    android:text="13h 1m"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Daytime"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:elevation="12dp"
                app:cornerRadius="12dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="USA"
                android:layout_marginStart="60dp"
                android:id="@+id/btn_lang_eng"
                android:layout_width="70dp"
                android:layout_height="70dp"/>
            <com.google.android.material.button.MaterialButton
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:elevation="12dp"
                app:cornerRadius="12dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="Rus"
                android:layout_marginHorizontal="40dp"
                android:id="@+id/btn_lang_rus"
                android:layout_width="70dp"
                android:layout_height="70dp"/>
            <com.google.android.material.button.MaterialButton
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:elevation="12dp"
                app:cornerRadius="12dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="kur"
                android:id="@+id/btn_lang_kur"
                android:layout_width="70dp"
                android:layout_height="70dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>